# deepgram-python-stt

./: .gitignore  CLAUDE.md  README.md  app.py  app_socketio.py  pyproject.toml  requirements.txt
common/: audio_settings.py  batch_audio.py
config/: defaults.json
static/: output.webm  script.js  style.css
templates/: index.html
